oms admin tool(ui), bug fixes
